--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "homepage": "https://github.com/cam5/cam5.github.io",
   "devDependencies": {
-    "uikit": "^2.23.0"
+    "uikit": "^2.23.0",
+    "gulp": "~3.8.11",
+    "gulp-concat": "2.5.2",
+    "gulp-svgmin": "^1.1.1",
+    "gulp-svgstore": "^5.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.1.0"
   }
 }
